--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "vite": "^7.1.2"
   },
   "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+    "node": ">=20",
+    "npm": ">=10"
   }
 }
-
-
